
Added new emulated machines: 
-MSX1 
-Spectravideo 318/328
-Colecovision 
-Sega SG1000

Added new compiled version: FreeBSD
Added support for compilation on Haiku
Added emulation of AY chip MIDI registers 14 & 15 and route them to an external MIDI device
Added Visualmem for MMC Read/Write
Added Visualmem "Defrag style"
Added browser for quicksave snapshots
Added save screen to bmp feature
Added MSX Gui Style
Added Solarized Dark & Light Gui Style
Added Windows icon
Added F key to toggle top cpu speed
Added F key to pause/unpause tape
Added setting to rotate output tape when selecting tape that already exists
Added setting to resample audio output to 1 bit

Added ZRCP commands:
-save-screen: to save machine screen to file



Improved menu:
-Allow some windows to be running on the background, all at the same time. This makes the menu environment more powerful!
-Active windows are saved and restored on startup
-Pressing the menu key (F5 by default) when menu is open, it will send you back to the main menu. Also pressing over Z logo on ext desktop
-Some window hotkeys can be activated with mouse click (example: Debug CPU Window, File utilities, View Sprites, Hex Editor, Disassemble)
-Improved some interface fonts in sizes smaller than 8 pixel width
-Added setting to select machine by name instead by manufacturer
-Added setting to disable showing cpu temperature, or FPS on footer
-Added keyboard help window for most machines
-Footer FPS warns in red colour when FPS low

Improved Esxdos handler: 
-add f_mkdir function 
-add configuration setting to save local work directory

Improved ZRCP:
-Allow to write commands in "". Not all commands support this
-Added save-binary command

Improved TBBlue emulation:
-Added Layer2 modes 320x256 and 640x256
-Added 4bpp sprites
-Enable Timex video by default
-Added altrom feature: now 48k and 128k mode works again
-Legacy hi-res and border effects disabled by default. Reduces up to 13% cpu use or gain 17 FPS on my environment