@@ -86,3 +86,4 @@ entonces en el servidor, en el archivo de update de la estable, ya habré actual
 
 - meter en extras de docs Benchmark legacy tbblue: de momento está en el código, en el menú como comentarios
 
+-Opción en menú para descargar los extras
