@@ -13,6 +13,7 @@ Added Visualmem for MMC Read/Write
 Added Visualmem "Defrag style"
 Added browser for quicksave snapshots
 Added save screen to bmp feature
+Added menu to download ZEsarUX extras
 Added MSX Gui Style
 Added Solarized Dark & Light Gui Style
 Added Windows icon
